correction des erreurs et beug et incoherence
